testsuite/deprecated/veronac/resolution/compile-fail/where-clause.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class A {}
class Main
{
  // CHECK-L: where-clause.verona:${LINE:+2}:11: error: Cannot find value for symbol 'y'
  missing_variable_left(x: A & mut)
    where y in x
  { }

  // CHECK-L: where-clause.verona:${LINE:+2}:16: error: Cannot find value for symbol 'y'
  missing_variable_right(x: A & mut)
    where x in y
  { }

  // CHECK-L: where-clause.verona:${LINE:+2}:11: error: Cannot find value for symbol 'self'
  static_self_left(x: A & mut)
    where self in x
  { }

  // CHECK-L: where-clause.verona:${LINE:+2}:16: error: Cannot find value for symbol 'self'
  static_self_right(x: A & mut)
    where x in self
  { }

  // CHECK-L: where-clause.verona:${LINE:+2}:11: error: A is not a local variable
  not_variable_left(x: A & mut)
    where A in x
  { }

  // CHECK-L: where-clause.verona:${LINE:+2}:16: error: A is not a local variable
  not_variable_right(x: A & mut)
    where x in A
  { }

  main() {}
}

